<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTwo"
    android:background="@color/white">

    <TextView
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_below="@+id/name_header"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/actionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <RadioButton
            android:id="@+id/alarm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="#333"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/music_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textColor="#333"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/gmail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#333"
            android:textSize="16sp" />


    </RadioGroup>

    <LinearLayout
        android:layout_below="@+id/actionGroup"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_btn"
            android:padding="16dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/black"/>

        <Button
            android:padding="16dp"
            android:id="@+id/submit_btn"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"/>
    </LinearLayout>

</RelativeLayout>